--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,12 +15,12 @@ android {
         applicationId "com.provectusstudios.transverse"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 3
-        versionName "1.0"
+        versionCode 6
+        versionName "1.03"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
@@ -33,8 +33,9 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
     compile files('libs/adcolony.jar')
     compile project(':unity-ads')
     compile project(':BaseGameUtils')
+    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.google.android.gms:play-services-analytics:8.4.0'
 }
